# llm-memory-compiler

./: .gitignore  AGENTS.md  README.md  lmc  pyproject.toml
.claude/: settings.json
.cursor/: hooks.json
.llm-memory/: config.json
hooks/: cursor-pre-compact.py  cursor-session-end.py  cursor-session-start.py  cursor-stop.py  generic-session-end.py  pre-compact.py  session-end.py  session-start.py  windsurf-hook.py
llm-memory/: AGENTS.md  README.md
llm_memory/: cli.py  compile.py  config.py  cursor_pre_compact.py  cursor_session_end.py  cursor_session_start.py  cursor_stop.py  flush.py  generic_session_end.py  lint.py  pre_compact.py  query.py  session_end.py  session_start.py  transcript.py  utils.py  windsurf_hook.py
llm_memory/agents/: __init__.py  base.py  claude_code.py  codex.py  continue_dev.py  copilot.py  cursor.py  devin.py  gemini.py  qwen.py  tabnine.py  windsurf.py
llm_memory/providers/: __init__.py  anthropic_api.py  base.py  claude_agent.py
scripts/: compile.py  config.py  flush.py  lint.py  query.py  utils.py
tests/: conftest.py  test_agents.py  test_cli.py  test_session_start.py  test_transcript.py  test_utils.py
