[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_memory"]

[project]
name = "llm-memory-compiler"
version = "0.2.0"
description = "Agent-agnostic personal knowledge base compiled from AI conversations"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40",
]

[project.scripts]
llm-memory-compiler = "llm_memory.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
